Fixed alignment

--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -18,6 +18,11 @@ li {
 	color: #fff;
 }
 
+ul {
+    text-align: center;
+    list-style-type: none;
+}
+
 img {
 	width: 50%;
 	height: 50%;
